--- a/views/salesEdit.ejs
+++ b/views/salesEdit.ejs
@@ -14,15 +14,39 @@
     </h1>
     <p>Edit a sales post</p>
     <form action="/sales/<%= salesPost.id %>/edit" method="post">
-        <label for="manufacturer">Manufacturer:</label><br>
-        <input type="text" id="manufacturer" name="manufacturer" value=""><br>
-        <label for=" model"> Model:</label><br>
-        <input type="text" id="model" name="model" value=""><br>
-        <label for="color">Color:</label><br>
-        <input type="text" id="color" name="color" value=""><br>
-        <label for="year"> Year:</label><br>
-        <input type="text" id="year" name="year" value=""><br><br>
-        <input type="submit" value="Submit">
+        <!DOCTYPE html>
+        <html>
+        
+        <head>
+            <title>
+        
+            </title>
+            <link rel='stylesheet' href='/stylesheets/style.css' />
+        </head>
+        
+        <body>
+            <h1>
+                Edit a Brand Post
+            </h1>
+            <p>Edit a brand post</p>
+            <form action="/sales/<%= salesPost.id %>/edit" method="post">
+                <label for="manufacturer">Manufacturer:</label><br>
+            <input type="text" id="manufacturer" name="manufacturer" value="<%= salesPost.manufacturer %>"><br>
+            <label for=" model"> Model:</label><br>
+            <input type="text" id="model" name="model" value="<%= salesPost.model %>"><br>
+            <label for="color">Color:</label><br>
+            <input type="text" id="color" name="color" value="<%= salesPost.color %>"><br>
+            <label for="year"> Year:</label><br>
+            <input type="text" id="year" name="year" value="<%= salesPost.year %>"><br><br>
+            <input type="submit" value="Submit">
+        
+            </form>
+            
+        
+        </body>
+        
+        </html>
+        
     </form>
 
 
